starting to add a table

--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
       <article></article>
       <article></article>
   </main>
+  <table>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
 
 </body>
 </html>
