changed the position of the 4 green boxes

--- a/green.html
+++ b/green.html
@@ -10,6 +10,8 @@
   <div class="box-main">
     <div class="left"></div>
     <div class="left-mid"></div>
+  </div>
+  <div class="box-bottom">
     <div class="right-mid"></div>
     <div class="right"></div>
   </div>
